fix: map images container column on mobile

--- a/css/map.css
+++ b/css/map.css
@@ -43,4 +43,9 @@
   #header-content {
     flex-direction: column;
   }
+
+  #images .section-container {
+    flex-direction: column;
+    gap: 0;
+  }
 }
